--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 								<a href="#gallery" class="menu__link">Gallery</a>
 							</li>
 							<li class="navigation__menu__item">
-								<a href="" class="menu__link">Blog</a>
+								<a href="#blog" class="menu__link">Blog</a>
 							</li>
 							<li class="navigation__menu__item">
-								<a href="" class="menu__link">Contact</a>
+								<a href="#contact" class="menu__link">Contact</a>
 							</li>
 						</ul>
 					</nav>
@@ -156,6 +156,37 @@
 						<button class="btn btn-more">View more</button>
 				</div>
 			</div>
+		</section>
+		<section class="ba-main-subscribe">
+			<div class="container">
+				<div class="ba-main-subscribe__content">
+					<h1 class="ba-main-subscribe__content__title">Subscribe To Us</h1>
+					<p class="ba-main-subscrie__content__text">Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+					<input type="email" id="email" class="ba-main-subscribe__content__input" placeholder="Your email address."><label class="ba-main-subscribe__content__label" for="email">Subscribe</label>
+				</div>
+			</div>
+		</section>
+		<section class="ba-main-blog" id="blog">
+			<div class="container">
+				<div class="ba-main-blog__content">
+					<h1 class="ba-main-blog__content__title">Blog</h1>
+					<p class="ba-main-blog__content__text">Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
+					<div class="ba-main-blog__content__img">
+						<img src="img/0.jpg" alt="1">
+						<img src="img/1.jpg" alt="2">
+						<img src="img/2.jpg" alt="3">
+					</div>
+					<button class="ba-main-blog__content__button">view more</button>
+				</div>
+			</div>
+		</section>
+		<section class="ba-main-contact">
+			<div class="ba-main-contact__content">
+				<h1 class="ba-main-contact__content__title">Contact</h1>	
+				<p class="ba-main-contact__content__text">For new projects, ideas, business or anything
+						you'd like to discuss, contact with me!</p>	
+						
+			</div>		
 		</section>
 	</main>
 </body>
