--- a/index.html
+++ b/index.html
@@ -180,14 +180,15 @@
 				</div>
 			</div>
 		</section>
-		<section class="ba-main-contact">
-			<div class="ba-main-contact__content">
-				<h1 class="ba-main-contact__content__title">Contact</h1>	
-				<p class="ba-main-contact__content__text">For new projects, ideas, business or anything
-						you'd like to discuss, contact with me!</p>	
-						
-			</div>		
-		</section>
 	</main>
+	<footer>
+		<div class="container footer-flex">
+			<div>&copy 2015 Company. All right reserved.</div>
+			<div class="footer__logo">Cahee</div>
+			<div>Made with <span class="footer__text--red">love</span> by Mir4ri</div>
+		</div>
+	</footer>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
