--- a/index.html
+++ b/index.html
@@ -180,13 +180,37 @@
 				</div>
 			</div>
 		</section>
+		<section class="ba-main-contact" id="contact">
+			<div class="container">
+				<div class="ba-main-contact__title">
+					<h1 class="ba-main-contact__title--big">Contact</h1>
+					<p class="ba-main-contact__title--small">For new projects, ideas, business or anything <br>you'd like to discuss, contact with me!</p>
+				</div>
+				<div class="ba-main-contact__flex">
+					<form class="ba-main-contact__flex__form" action="post">
+						<input type="text" class="ba-main-contact__flex__form--text" placeholder="Auskteez Tran"><br>
+						<input type="email" class="ba-main-contact__flex__form--email" placeholder="Your email"><br>
+						<input type="number" class="ba-main-contact__flex__form--number" placeholder="Your phone number"><br>
+						<textarea id="" cols="30" rows="10" class="ba-main-contact__flex__form--textarea" placeholder="Your massage"></textarea><br>
+					</form>
+					<div class="ba-main-contact__flex__address">
+						<p class="ba-main-contact__flex__adrress--bold">Address</p>
+						<p class="ba-main-contact__flex__adrress--light">123 City name,Street city, Country</p>
+						<p class="ba-main-contact__flex__adrress--bold">Email</p>
+						<p class="ba-main-contact__flex__adrress--light">cahee@domain.com</p>
+						<p class="ba-main-contact__flex__adrress--bold">Phone</p>
+						<p class="ba-main-contact__flex__adrress--light">+123 456 7890</p>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 	<footer>
 		<div class="container footer-flex">
 			<div>&copy 2015 Company. All right reserved.</div>
-			<div class="footer__logo">Cahee</div>
+			<a href="#header" class="footer__logo">Cahee</a>
 			<div>Made with <span class="footer__text--red">love</span> by Mir4ri</div>
-		</div>
+		</da>
 	</footer>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script src="js/main.js"></script>
